Changes to SWCE endpoints and category support

--- a/css/culture-object-sync.css
+++ b/css/culture-object-sync.css
@@ -25,3 +25,12 @@ div.help-tooltip:hover {
 .tooltiptext {
   display: none;
 }
+
+div#ajax_output {
+    margin-top: 10px;
+    background-color: #ccc;
+    border: 1px solid #bbb;
+    padding: 5px;
+    max-height: 100px;
+    display: none;
+}
