Support picking of title and ID fields

--- a/providers/CSV2/assets/admin.css
+++ b/providers/CSV2/assets/admin.css
@@ -18,3 +18,7 @@
     font-weight: bold;
     text-shadow: 1px 1px 0 #fff;
 }
+#id_field, #title_field {
+    margin-bottom: 20px;
+    display: block;
+}
